--- a/application/views/add_product.html
+++ b/application/views/add_product.html
@@ -277,10 +277,10 @@
         return false;
       }
 
-      if (!validateExpiredDate(enddate)) {
-        alert("Your Date is invalid.");
-        return false;
-      }
+      // if (!validateExpiredDate(enddate)) {
+      //   alert("Your Date is invalid.");
+      //   return false;
+      // }
 
       if (!validateDigit(quantity)) {
         alert("Your quantity is invalid.");
