--- a/application/views/add_product.html
+++ b/application/views/add_product.html
@@ -282,10 +282,10 @@
       //   return false;
       // }
 
-      if (!validateDigit(quantity)) {
-        alert("Your quantity is invalid.");
-        return false;
-      }
+      // if (!validateDigit(quantity)) {
+      //   alert("Your quantity is invalid.");
+      //   return false;
+      // }
 
       if (!validateDigit(price)) {
         alert("Your price is invalid.");
