--- a/application/views/seller_home.html
+++ b/application/views/seller_home.html
@@ -55,11 +55,10 @@
 				<div class="col-lg-8 col-lg-offset-2">
 				<h1 style="margin-top:50px">Welcome!</h1><br><h1 style="margin-top:-20px;margin-bottom:20px;font-size:40px">Do you have any product?</h1>
 				<h1 style="margin-top:-20px;margin-bottom:40px;font-size:40px">Let's join us.</h1>
-				<h3><a href="home_c/product" ><b>> Product <</b></a></h3>
-				<h3><a href="home_c/addProduct" ><b>> Add Product <</b></a></h3>
-				<h3><a href="home_c/watchlist" ><b>> Watch List <</b></a></h3>
-				<h3><a href="home_c/message" ><b>> Messages Box <</b></a></h3>
-				<h3><a href="home_c/history" ><b>> History <</b></a></h3>
+				<h3><a href=<?php echo site_url('home_c/product');?>><b>> Product <</b></a></h3>
+				<h3><a href=<?php echo site_url('product_c/newProduct');?>><b>> Add Product <</b></a></h3>
+				<h3><a href=<?php echo site_url('home_c/message'); ?>><b>> Messages Box <</b></a></h3>
+				<h3><a href=<?php echo site_url('home_c/history'); ?>><b>> History <</b></a></h3>
 				</div>
 			</div><!-- row -->
 		</div><!-- container -->
