--- a/application/views/watchlist.html
+++ b/application/views/watchlist.html
@@ -102,7 +102,7 @@ include 'HTMLHeader.html';
                         <h3>'.$row->Name.'</h3>
                         <h4><strong>Status: </strong>'.$status.'</h4>
                         <strong>Due date: </strong>'.$row->End_Date.'
-                        <br><strong>Time left: </strong><a id=\"time".$x."\">'.$Date.'</a>
+                        <br><strong>Time left: </strong><a id="time'.$x.'">00:00:00:00</a>
                         <a href="'.'watchlist_c/productDetail/'.$row->Product_ID.'">
                         <br>More info...</a>
                       </div>
@@ -150,7 +150,7 @@ include 'HTMLHeader.html';
           <div style="display:none">
     <?php
             $x=0;
-            foreach($bidProducts->result() as $row){
+            foreach($products->result() as $row){
               echo '<a id="t'.$x.'">'.$row->End_Date.'</a>';
               $x++;
             }
@@ -220,6 +220,15 @@ include 'HTMLHeader.html';
         }
 
       }
+      var t = 0;
+  // alert(p);
+   for (t=0;t<document.getElementById('length').innerHTML;t++){
+    
+      startTime('t'+t,'time'+t);
+      // startTime('t0','time0');
+      // alert(p);
+
+   }
         // startTime();
 $('#hi').hide();
     $('#length').hide();
