--- a/application/views/product.html
+++ b/application/views/product.html
@@ -89,7 +89,7 @@
 									echo "<hr>";
 									echo "<div class=\"row\">";
 										echo "<div class=\"col-lg-4 centered productimg\">";
-										echo '<img src="'.$row->Image.'">';
+										echo img("assets/img/".$row->Image);
 										echo "</div>";
 										echo "<div class=\"col-lg-4\">";
 											echo "<b>".$row->Name."</b><br>";
@@ -134,7 +134,7 @@
 									echo "<hr>";
 									echo "<div class=\"row\">";
 										echo "<div class=\"col-lg-4 centered productimg\">";
-										echo '<img src="'.$row->Image.'">';
+										echo img("assets/img/".$row->Image);
 										echo "</div>";
 										echo "<div class=\"col-lg-5\">";
 											echo "<b>".$row->Name."</b><br>";
