--- a/application/views/product.html
+++ b/application/views/product.html
@@ -94,7 +94,7 @@
 										echo "<div class=\"col-lg-4\">";
 											echo "<b>".$row->Name."</b><br>";
 											echo "Price: ".$row->Price." Baht<br>";
-											echo "Amount: ".$row->Quantity." ea<br>";
+											//echo "Amount: ".$row->Quantity." ea<br>";
 											echo "<a href= \"product_c/viewProductDetail/".$row->Product_ID."\" >More info..</a>";
 										echo "</div>";
 										echo "<div class=\"col-lg-4 productbutton\">";
